fix: z-index of logo

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -154,7 +154,7 @@ a {
   &-mobile {
     display: none;
     position: absolute !important;
-    z-index: 32;
+    z-index: 40;
     top: 3.5em;
     right: 8%;
     width: 35px;
@@ -610,7 +610,7 @@ a {
         width: 40%;
         min-width: 260px;
         position: absolute;
-        z-index: 30;
+        z-index: 35;
         top: -2px;
         right: -100%;
         padding: 5em 3em 5em 3em;
@@ -683,6 +683,7 @@ a {
 
   &--header {
     position: absolute;
+    z-index: 30;
     left: 50%;
     display: block;
     width: 110px;
@@ -930,7 +931,7 @@ a {
       &:hover,
       &-active {
         &:before {
-          background-position: -300px 0;
+          background-position: -301px 0;
         }
       }
     }
